--- a/solution/expenses/src/main/resources/application.properties
+++ b/solution/expenses/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 ## Configure server properties
-server.address = localhost
-server.port = 8080
+server.address = <hostname>
+server.port = <port>
 # Enable error stacktrace to be included in Thymeleaf
-server.error.include-stacktrace=always
+server.error.include-stacktrace = always
 
 ## Configure application endpoints
-application.api.path = /app
-application.api.expenses.endpoint = /expenses
+application.api.path = /<api>
+application.api.expenses.endpoint = /<endpoint>
 
 ## Configure Spring datasource
-spring.datasource.url = jdbc:postgresql://localhost:5432/expensesdb?useSSL=false
-spring.datasource.username = engagetech
-spring.datasource.password = engagetech
-spring.datasource.driver-class-name= org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://<db_server>:<db_port>/<db_name>?useSSL=false
+spring.datasource.username = <db_username>
+spring.datasource.password = <db_password>
+spring.datasource.driver-class-name = org.postgresql.Driver
 
 ## Hibernate Properties
 # Disable feature detection by this undocumented parameter.
@@ -34,6 +34,6 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.type = trace
 
 ## Configure spring user with a custom password
-spring.security.user.name = engagetech
-spring.security.user.password = engagetech
-spring.security.user.roles = USER
+spring.security.user.name = <username>
+spring.security.user.password = <password>
+spring.security.user.roles = <ROLE>
