--- a/solution/expenses/src/main/resources/application.properties
+++ b/solution/expenses/src/main/resources/application.properties
@@ -3,10 +3,16 @@ server.address = <hostname>
 server.port = <port>
 # Enable error stacktrace to be included in Thymeleaf
 server.error.include-stacktrace = always
+# server.allowedOrigins = http://www.engagetech.com,http://localhost:8080
 
 ## Configure application endpoints
-application.api.path = /<api>
-application.api.expenses.endpoint = /<endpoint>
+## Example: <api> as app and <endpoint> as expenses would give this route /app/expenses
+application.api.path = /app
+application.api.expenses.endpoint = /expenses
+
+## Configure public API for currency conversion (REST API calls)
+application.currency.converter.api.path = http://data.fixer.io/api/latest
+application.currency.converter.api.key = e042af94d162e5ecaeca626298dbaf65
 
 ## Configure Spring datasource
 spring.datasource.url = jdbc:postgresql://<db_server>:<db_port>/<db_name>?useSSL=false
@@ -28,12 +34,12 @@ spring.jpa.hibernate.ddl-auto = create-drop
 
 # Log SQL statements
 # Set these properties to false to disable logging SQL statements
-spring.jpa.properties.hibernate.show_sql = true
-spring.jpa.properties.hibernate.use_sql_comments = true
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.properties.hibernate.type = trace
+spring.jpa.properties.hibernate.show_sql = false
+spring.jpa.properties.hibernate.use_sql_comments = false
+spring.jpa.properties.hibernate.format_sql = false
+# spring.jpa.properties.hibernate.type = trace
 
-## Configure spring user with a custom password
+## Configure Spring user with a custom password
 spring.security.user.name = <username>
 spring.security.user.password = <password>
 spring.security.user.roles = <ROLE>
