--- a/solution/expenses/src/main/resources/application.properties
+++ b/solution/expenses/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.allowedOrigins = http://www.engagetech.com,http://localhost:8080
 
 ## Configure application endpoints
 ## Example: <api> as app and <endpoint> as expenses would give this route /app/expenses
-application.api.path = /<app>
+application.api.path = /<api>
 application.api.expenses.endpoint = /<endpoint>
 
 ## Configure public API for currency conversion (REST API calls)
