Add a global configuration point for the application timezone and locale

--- a/solution/expenses/src/main/resources/application.properties
+++ b/solution/expenses/src/main/resources/application.properties
@@ -44,3 +44,9 @@ spring.jpa.properties.hibernate.format_sql = false
 spring.security.user.name = <username>
 spring.security.user.password = <password>
 spring.security.user.roles = <ROLE>
+
+## Configure time zone and locale globally
+# <timezone> can be something like Europe/London for example
+# <locale> can be something like en-UK
+spring.jackson.time-zone = <timezone>
+spring.jackson.locale = <locale>
